--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <!-- main pictures -->
+<!-- main pictures -->
         <div class="row-pictures">
             <div class="image">
                 <img src="img/tim-1.jpg" alt="">
@@ -44,6 +44,7 @@
             </div>
         </div>
 
+<!--  paragraphs  -->
         <div class="description-pictures">
             <span>1st Photo: John S. and James L. Knight Foundation,by Scott Hernrichsen</span>
             <br><span>2nd Photo: Wikimedia, by Paul Clarke</span>
@@ -53,6 +54,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, doloribus consequatur. Et recusandae illum ipsum neque ad alias pariatur earum, assumenda asperiores voluptate unde non provident, in minus iste praesentium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto doloremque repudiandae aperiam delectus itaque ipsum laborum necessitatibus, consectetur quas distinctio quia adipisci voluptatibus ipsam dolorum mollitia velit facere? Iusto, quis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, corrupti. Eius accusamus ducimus labore omnis sequi aperiam fuga optio nisi at cum dicta quas consequatur nemo nesciunt, itaque quo hic. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia, similique eos doloribus ducimus veniam aliquam veritatis voluptas, necessitatibus labore libero quam earum dignissimos dolore hic.</p>
         </div>
 
+<!-- list Lorem -->
         <div class="schedule">
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora mollitia aperiam ratione amet, nemo consequuntur repudiandae assumenda! Hic, quae eligendi enim voluptates eaque animi explicabo fuga quia accusamus consequuntur et?</li>
@@ -61,6 +63,7 @@
             </ul>
         </div>
 
+<!-- starting Table Lorem ipsum dolor -->
         <div class="box">
             <div class="first-line">
                 <div class="token">
@@ -120,7 +123,7 @@
             </div>
         </div>
 
-
+<!-- final paragraph -->
         <div class="final">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, doloribus consequatur. Et recusandae illum ipsum neque ad alias pariatur earum, assumenda asperiores voluptate unde non provident, in minus iste praesentium. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto doloremque repudiandae aperiam delectus itaque ipsum laborum necessitatibus, consectetur quas distinctio quia adipisci voluptatibus ipsam dolorum mollitia velit facere? Iusto, quis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, corrupti. Eius accusamus ducimus labore omnis sequi aperiam fuga optio nisi at cum dicta quas consequatur nemo nesciunt, itaque quo hic. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia, similique eos doloribus ducimus veniam aliquam veritatis voluptas, necessitatibus labore libero quam earum dignissimos dolore hic.</p>
         </div>        
